--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- Header -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-center">
-        <a class="navbar-brand title" href="#">GIPHYMANIA!</a>
+        <a class="navbar-brand title" href="#">Giphymania!</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -46,6 +46,7 @@
         <!-- Button Area -->
         <div class="col-md-4">
             <div class="jumbotron jumbotron-fluid" id="button-body">
+                <p class="click-button-message">Click Buttons To Be Amazed!</p>
                 <div class="container" id="btn-add">
 
                 </div>
